@@ -1,3 +1,8 @@
+2004-05-28  Gareth Owen  <gowen72@yahoo.com>
+
+	* weather.c: Free buffers on deleting weather info structure.
+	Fixes bug #143316
+
 2004-05-27  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* gweather-applet.c, weather.c: Applied patch by Gareth Owen that fixes bug
